# article-summarizer

summary_service/: Dockerfile  pyproject.toml
summary_service/summary/: api.py
